<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bo_tron">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/actionBarItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_400"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:src="@drawable/ic_left"
        android:text="@string/cancel"
        android:textColor="@color/neutral_trang"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_600"
        android:text="@string/My_Gallery"
        android:textColor="@color/neutral_trang"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:minLines="1"
        android:lines="1"
        android:ellipsize="end"
        android:id="@+id/done_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/urbanist_400"
        android:paddingHorizontal="16dp"
        android:paddingVertical="@dimen/dp6"
        android:text="@string/selected"
        android:textColor="@color/neutral_trang"
        android:textSize="@dimen/sp16"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:minLines="1"
        android:lines="1"
        android:ellipsize="end"
        android:id="@+id/done_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/urbanist_400"
        android:paddingHorizontal="16dp"
        android:paddingVertical="@dimen/dp6"
        android:text="@string/Unselect"
        android:textColor="@color/neutral_trang"
        android:textSize="@dimen/sp16"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>