<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp20">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FCD9D9">

                <TextView
                    android:id="@+id/txtDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="12dp"
                    android:layout_marginStart="@dimen/dp20"
                    android:fontFamily="@font/urbanist_600"
                    android:text="@string/delete1"
                    android:textColor="#2C2C2C"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtAreYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/urbanist_400"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/are_you"
                android:textColor="#2C2C2C"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:gravity="end"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="#DDDDDD"
                    app:cardCornerRadius="21dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/tv_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanist_600"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="6dp"
                        android:text="@string/cancel"
                        android:textColor="#898989"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_delete"
                    style="@style/TextViewBaseToolbar"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/dp10"
                    android:background="@drawable/bg_delete"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="6dp"
                    android:text="@string/delete"
                    android:textColor="#BA1A1A" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>