<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp20">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/urbanist_600"
                    android:text="@string/Confirm_Quit"
                    android:textColor="#2C2C2C"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtAreYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/urbanist_400"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/Are_you_sure_want_to_quit_app"
                android:textColor="#2C2C2C"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:gravity="end"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:cardBackgroundColor="#DDDDDD"
                    app:cardCornerRadius="21dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/tv_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/urbanist_600"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="6dp"
                        android:text="@string/cancel"
                        android:textColor="#656565"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    app:cardElevation="0dp"
                    app:cardCornerRadius="21dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    app:cardBackgroundColor="#F6CB60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtQuit"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="6dp"
                        android:text="@string/Quit"
                        android:textSize="16sp"
                        android:fontFamily="@font/urbanist_600"
                        android:textColor="#2C2C2C" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>