<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF1FD">

    <include
        android:id="@+id/toolbar"
        layout="@layout/item_toolbar" />

    <HorizontalScrollView
        android:id="@+id/llTabBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_exit"
                android:fontFamily="@font/urbanist_500"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                android:text="@string/all"
                android:textColor="@color/color_464646"
                android:textSize="@dimen/sp14" />

            <TextView
                android:id="@+id/txtCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_folder"
                android:fontFamily="@font/urbanist_500"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                android:text="@string/camera"
                android:textColor="#636363"
                android:textSize="@dimen/sp14" />

            <TextView
                android:id="@+id/txtScreenshorts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_folder"
                android:fontFamily="@font/urbanist_500"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                android:text="@string/screenshots"
                android:textColor="#636363"
                android:textSize="@dimen/sp14" />

            <TextView
                android:id="@+id/txtDownloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24sdp"
                android:background="@drawable/bg_folder"
                android:fontFamily="@font/urbanist_500"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                android:text="@string/downloads"
                android:textColor="#636363"
                android:textSize="@dimen/sp14" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvListImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTabBar"
        app:spanCount="4"
        tools:listitem="@layout/item_my_creation" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvListImg1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp4"
        android:layout_marginTop="@dimen/dp20"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTabBar"
        app:spanCount="4"
        tools:listitem="@layout/item_my_creation" />

    <LinearLayout
        android:id="@+id/layoutNoPics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp200"
            android:layout_gravity="center"
            android:src="@drawable/ic_empty" />

        <TextView
            android:id="@+id/txt_nopics"
            style="@style/TextViewBaseToolbar"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp16"
            android:fontFamily="@font/urbanist_600"
            android:text="@string/Your_gallery_is_empty"
            android:textColor="#5C5C5C"
            android:textSize="@dimen/sp18" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>